--- a/src/main/resources/templates/dashboard/student-subjects.html
+++ b/src/main/resources/templates/dashboard/student-subjects.html
@@ -405,6 +405,8 @@
 
         async function initializePage() {
             try {
+                // First refresh user data to get latest class ID
+                await refreshUserData();
                 loadUserInfo();
                 await loadSubjects();
                 setupEventListeners();
