--- a/src/main/resources/templates/dashboard/student-timetable.html
+++ b/src/main/resources/templates/dashboard/student-timetable.html
@@ -408,6 +408,8 @@
 
         async function initializePage() {
             try {
+                // First refresh user data to get latest class ID
+                await refreshUserData();
                 loadUserInfo();
                 await loadTimetable();
                 setupEventListeners();
